# CMakeWizard

./: CMakeLists.txt  LICENSE.md  README.md  resources.qrc
cmake/: ApplicationVersion.cmake  Dependencies.cmake  ExternalEasylogging++.cmake  ExternalJson.cmake  Externals.cmake
res/: packages.json
src/: cmake_library.cpp  cmake_library.h  cmake_option.cpp  cmake_option.h  cmake_package.cpp  cmake_package.h  cmake_project.cpp  cmake_project.h  cmakebuildmover.cpp  cmakebuildmover.h  cmakelibrary.cpp  cmakelibrary.h  cmakeoption.cpp  cmakeoption.h  cmakepackage.cpp  cmakepackage.h  cmakeproject.cpp  cmakeproject.h  externalpackage.h  main.cpp  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
